# cadrum

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build_delegation.rs  makefile  rustfmt.toml  仕様書.md
.github/workflows/: prebuilt.yaml
cpp/: body_topology.cpp  body_topology.h  bspline_internal.h  bspline_surface.cpp  sew_heal.cpp  sew_heal.h  solid_from_shells.cpp  solid_from_shells.h  trimmed_bspline.cpp  trimmed_bspline.h  wasi_stub.c  wrapper.cpp  wrapper.h
docker/: Dockerfile_aarch64-unknown-linux-gnu  Dockerfile_wasm-clang  Dockerfile_wasm32-unknown-unknown  Dockerfile_x86_64-pc-windows-gnu  Dockerfile_x86_64-pc-windows-msvc  Dockerfile_x86_64-unknown-linux-gnu  Dockerfile_x86_64-unknown-linux-musl  Makefile  README.md  entrypoint.sh
docker/wasm-clang/: build-clang-wasm.sh  compile-ffi.sh  embed_data.c  gate0.sh  gate0_min_fs.c  gate0_tar_io.c  pack.py
docs/: 20260320-型安全Shape分離設計_jp.md  20260329-wasmビルド方針_jp.md
examples/: 00_chijin.rs  01_primitives.rs  02_transform.rs  02_write_read.rs  03_boolean.rs  03_transform.rs  04_boolean.rs  04_stretch.rs  05_chijin.rs  05_extrude.rs  05_loft.rs  05_screw.rs  06_loft.rs  07_sweep.rs  07_sweep_sections.rs  08_bspline.rs  08_shell.rs  09_bspline.rs  100_chijin.rs  101_joint.rs  10_chijin.rs  10_fillet.rs  11_chamfer.rs  12_multiview.rs  book.rs  box.rs  chijin.rs  codegen.rs  make_chijin.rs  markdown.rs  stretch.rs
notes/: 20260301-仕様書.md  20260302-libstdc++-6.dll依存エラーと修正.md  20260302-実装メモ_en.md  20260302-実装メモ_jp.md  20260303-Generated空原因調査_jp.md  20260303-Result型移行_jp.md  20260303-ffi例外安全性_jp.md  20260303-stretch断面フェイス取得_jp.md  20260304-brep-color-format_jp.md  20260304-color2実装記録_jp.md  20260304-color機能実装調査報告_jp.md  20260304-color機能設計_jp.md  20260305-windowscodecs-link-error_jp.md  20260326-shape-redesign_jp.md  20260329-wasmビルド方針_jp.md  20260404-OCCT_PureRustデュアルバックエンド計画.md  20260404-STEPファイル（ISO 10303-21）のデータ構造解説.md  20260408-cmake排除計画.md  20260410-Edge応用先とステラレーターCAD方針.md  20260410-loft閉じ方とparastell比較.md  20260411-MakePipeShellのseam問題とGordonSurface案.md  20260411-OCCT8移行計画.md  20260415-windows_gnu_prebuiltの静的リンク.md  20260416-windows_gnu_prebuilt_self_contained方針.md  20260420-OCCTトポロジ不変性と設計含意.md  20260425-Solid_history導入とCxxOpaqueStruct廃止.md  20260514-boolean演算は単体x単体のみ公開する方針.md  20260518-0.8.1リリース判断.md  20260529-競合分析とcadrum弱み分析_jp.md  20260612-OCCTをwasmに載せてrun-cadrumを通す.md  20260617-build_rsの各関数とOCCT_ROOTへの影響.md  20260617-wasmセクション構造とimportのインデックス空間.md  20260618-wasm版clangでFFIコンパイルを実証.md  20260713-実利用3件から見た不足と過剰.md  20260714-BRep_textを捨てて前置マジックに移行.md
sandbox-wasm/: Cargo.toml  build.rs  makefile  run_node.mjs
sandbox-wasm/src/: lib.rs  wasi_stub.c
src/: edge.rs  error.rs  face.rs  ffi.rs  io.rs  lib.rs  shape.rs  solid.rs  traits.rs  utils.rs  wasi_stub.rs
src/common/: boolean.rs  bspline.rs  color.rs  error.rs  mesh.rs  mod.rs  sew_heal.rs  topology.rs  trimmed_bspline.rs  utils.rs
src/occt/: body.rs  body_io.rs  boolean.rs  bspline.rs  compound.rs  edge.rs  face.rs  ffi.rs  io.rs  iterators.rs  mod.rs  sew_heal.rs  shape.rs  shell.rs  solid.rs  stream.rs  topology.rs  trimmed_bspline.rs  utils.rs
src/pure/: edge.rs  face.rs  mod.rs  solid.rs
tests/: LAMBDA360-BOX-d6cb2eb2d6e0d802095ea1eda691cf9a3e9bf3394301a0d148f53e55f0f97951.step  bench_into_solids.rs  body_topology_io.rs  boolean.rs  boolean_subtract.rs  boolean_union.rs  brep.rs  bspline.rs  bspline_surface.rs  chamfer.rs  edge.rs  face.rs  fillet.rs  gltf.rs  history.rs  integration.rs  integration_color.rs  integration_color_brep.rs  integration_color_step.rs  integration_utils.rs  loft.rs  mass_properties.rs  mesh.rs  offset.rs  open_shell.rs  png.rs  sew.rs  sew_heal_report.rs  shape.rs  shell.rs  stretch_box.rs  subtract.rs  svg.rs  sweep_sections.rs  thru_sections.rs  trimmed_bspline.rs  union.rs  utils.rs
tests/fixtures/: ascii_box.brep
wasm-experiment/: Cargo.toml
wasm-experiment/src/: chijin.rs
