[package]
name = "cadrum"
version = "0.4.4"
edition = "2021"
description = "Rust CAD library powered by OpenCASCADE (OCCT 8.0.0-rc5)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzpel/cadrum"
keywords = ["opencascade", "cad", "step", "b-rep", "geometry"]
categories = ["graphics", "science"]
exclude = ["/figure", "/notes", "/steps", "/sandbox*", "/.github"]

[features]
default = ["color"]
# Enable TShapeId, Rgb, and colormap on Shape for face-level color tracking
color = []
# Pure Rust CAD backend (no OCCT dependency)
pure = []

[dependencies]
cxx = "1"
glam = { version = "0.29", features = ["std"] }


[build-dependencies]
cxx-build = "1"
# download OpenCASCADE
ureq = "3"
# extract tar.gz
libflate = "2"
tar = "0.4"
cmake = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

# Examples that depend on the `color` feature. Cargo will skip building these
# under `--no-default-features`. Examples without a `[[example]]` entry
# (02_write_read, markdown) build under all feature configurations.
[[example]]
name = "01_primitives"
required-features = ["color"]

[[example]]
name = "03_transform"
required-features = ["color"]

[[example]]
name = "04_boolean"
required-features = ["color"]

[[example]]
name = "05_extrude"
required-features = ["color"]

[[example]]
name = "06_loft"

[[example]]
name = "07_sweep"
required-features = ["color"]

[[example]]
name = "08_sweep_sections"

[[example]]
name = "10_chijin"
required-features = ["color"]
