[package]
name = "wasm-experiment"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
cadrum = { path = "..", default-features = false, features = ["source", "color"], optional = true }
cxx = { version = "1", optional = true }

[build-dependencies]
cc = "1"
cxx-build = "1"

# OCCT 由来の wasm 例外ハンドリングを含むと wasm-opt(binaryen) が Precompute pass で
# クラッシュするため wasm-opt を無効化（最適化を外すだけで機能には影響しない）。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
pure = []
cc = []
cxx = ["dep:cxx"]
cadrum = ["dep:cadrum"]
libcxx = [] # build with libcxx

# 最終 wasm のサイズ最適化（rust コード全部＝cadrum の rust 側も含む。OCCT/C++ は
# cmake/cc 管轄なので対象外）。panic=abort と strip は速度ノーコストで効く。
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true